[package]
name = "react-native-cpush-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_with = "3.8"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
log-panics = { version = "2", features = ["with-backtrace"] }
anyhow = "1"
chrono = "0.4"
actix-web = { version = "4", default-features = false, features = ["macros"] }
actix-multipart = "0.6"
mongodb = { version = "2.8" }
toml = "0.8"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
